--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Documentation</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Docs - StandardKit</title>
+    <base href="/">
+    <meta
+      content="width=device-width, initial-scale=1"
+      name="viewport">
+    <link
+      href="assets/standardkit-icon.png"
+      rel="icon"
+      type="image/png">
+  </head>
+  <body>
+    <docs-root></docs-root>
+  </body>
 </html>
